--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.18.1",
     "core-js": "^3.6.5",
     "firebase": "^8.3.0",
+    "lodash": "^4.17.21",
+    "lodash.truncate": "^4.4.2",
     "moment": "^2.29.1",
     "quasar": "^1.0.0"
   },
