--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.1",
     "core-js": "^3.6.5",
     "firebase": "^8.3.0",
+    "image-conversion": "^2.1.1",
     "lodash": "^4.17.21",
     "lodash.truncate": "^4.4.2",
     "moment": "^2.29.1",
