--- a/package.json
+++ b/package.json
@@ -10,15 +10,25 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@quasar/cli": "^1.1.3",
     "@quasar/extras": "^1.0.0",
+    "app": "^0.1.0",
+    "autoprefixer": "^9.0.0",
     "axios": "^0.18.1",
+    "boot": "^0.8.2",
     "core-js": "^3.6.5",
     "firebase": "^8.3.0",
     "image-conversion": "^2.1.1",
+    "layouts": "^3.0.2",
     "lodash": "^4.17.21",
     "lodash.truncate": "^4.4.2",
     "moment": "^2.29.1",
-    "quasar": "^1.0.0"
+    "pages": "0.0.16",
+    "quasar": "^1.0.0",
+    "src": "^1.1.2",
+    "vue": "^2.6.12",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
