--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "image-conversion": "^2.1.1",
     "layouts": "^3.0.2",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lodash.truncate": "^4.4.2",
     "moment": "^2.29.1",
     "pages": "0.0.16",
