--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "heroku-postbuild": "yarn && yarn build"
+
   },
   "dependencies": {
     "@quasar/cli": "^1.1.3",
@@ -17,7 +19,9 @@
     "axios": "^0.18.1",
     "bad-words": "^3.0.4",
     "boot": "^0.8.2",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "firebase": "^8.3.0",
     "image-conversion": "^2.1.1",
     "layouts": "^3.0.2",
@@ -27,6 +31,7 @@
     "moment": "^2.29.1",
     "pages": "0.0.16",
     "quasar": "^1.0.0",
+    "serve-static": "^1.14.1",
     "src": "^1.1.2",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
