--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0",
-    "heroku-postbuild": "yarn && yarn build"
-
+    "heroku-postbuild": "npm install && npm run build"
   },
   "dependencies": {
     "@quasar/cli": "^1.1.3",
