--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "quasar": "^1.0.0",
     "serve-static": "^1.14.1",
     "src": "^1.1.2",
+    "user-home": "^2.0.0",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
