--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
 .thumbs.db
 node_modules
-!node_modules/user-home/*
+!/node_modules/user-home/*
 
 # Quasar core related directories
 .quasar
