--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
-    "test": "echo \"No test specified\" && exit 0",
+    "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "@quasar/cli": "^1.1.3",
